--- a/Untitled6.ipynb
+++ b/Untitled6.ipynb
@@ -27,9 +27,9 @@
     "vel = 5 #(m/s)\n",
     "\n",
     "#angle range\n",
-    "max_angle = np.deg2rad(45) \n",
-    "min_angle = np.deg2rad(-45)\n",
-    "delta_angle = np.deg2rad(5)\n",
+    "max_angle = np.deg2rad(35) \n",
+    "min_angle = np.deg2rad(-35)\n",
+    "#delta_angle = np.deg2rad(5)\n",
     "\n",
     "#Hybrid A star\n",
     "num_theta_cells = 60 #Number of parts a circle is divided into\n",
@@ -121,6 +121,44 @@
     "    stack_number = round(((theta+2*np.pi)%(2*np.pi))*num_theta_cells/2*np.pi)%num_theta_cells\n",
     "    return int(stack_number)\n",
     "\n",
+    "### NORMALIZE THETA\n",
+    "def normalize_psi(psi):\n",
+    "    if( psi<0 ):\n",
+    "        psi +=( 2*np.pi )\n",
+    "    elif( psi>2*np.pi ):\n",
+    "        psi %=( 2*np.pi)\n",
+    "    return psi\n",
+    "\n",
+    "## New state transition\n",
+    "def new_state_transition(current_state,goal):\n",
+    "    next_states = []\n",
+    "    #----Augmented omega list\n",
+    "    omega_list = np.linspace(min_angle,max_angle,11)\n",
+    "    #------\n",
+    "    dt = 0.1\n",
+    "    for omega in omega_list:\n",
+    "        ## ---AGV state parameters\n",
+    "        vr = (2*vel + omega*db_wheels ) / (2*wheel_radius)\n",
+    "        vl = (2*vel - omega*db_wheels ) / (2*wheel_radius)\n",
+    "        psi2 = normalize_psi(current_state.psi + (omega * dt))\n",
+    "        \n",
+    "        dx = vel * np.cos(psi2) * dt\n",
+    "        dy = vel * np.sin(psi2) * dt\n",
+    "        \n",
+    "        x2 = current_state.x + dx\n",
+    "        y2 = current_state.y + dy\n",
+    "        g2 = current_state.g + np.sqrt(dx*dx + dy*dy)\n",
+    "        \n",
+    "        ##---Trolley states\n",
+    "        tl_ = []\n",
+    "        for i in range(1,current_state.no_trolley+1):\n",
+    "            \n",
+    "            \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "    \n",
+    "\n",
     "## A_star search\n",
     "def a_star_search(current,goal): #start and goal are inverse here\n",
     "    start_time = time.time()\n",
@@ -131,7 +169,7 @@
     "    open_list.append(current)\n",
     "    # value map is used to store the goal to start value for each node\n",
     "    value_map[current.x][current.y]=0 \n",
-    "    while(len(open_list)!=0):\n",
+    "    while(len(open_list)>0):\n",
     "        old_state = open_list.pop(0)\n",
     "        node = np.array([old_state.x,old_state.y])\n",
     "        if(goal[0]==old_state.x and goal[1]==old_state.y):\n",
@@ -153,15 +191,26 @@
     "                        \n",
     "## Hybrid A star               \n",
     "def Hybrid_A_star(current_state,goal,agv_obj):\n",
+    "    start_time = time.time()\n",
     "    print(\"Started Hybrid A star\")\n",
     "    closed = np.array([[[0 for x in range(grid_.shape[0])] for y in range(grid_shape[1])] for cell in range(num_theta_cells)])\n",
     "    came_from = np.array([[[0 for x in range(grid_.shape[0])] for y in range(grid_.shape[1])] for cell in range(num_theta_cells)])\n",
-    "    goal_reached = False\n",
     "    stack_number = theta_to_stack_number(current_state.psi)\n",
     "    closed[stack_number][idx(current_state.x)][idx(current_state.y)]=1\n",
     "    came_from[stack_number][idx(current_state.x)][idx(current_state.y)]=current_state\n",
     "    total_closed=1\n",
     "    opened=[current_state]\n",
+    "    while(len(opened)>0):\n",
+    "        opened.sort(key = lambda state_ : float(state_.f))\n",
+    "        state_now = opened.pop(0)\n",
+    "        if((idx(state_now.x) == idx(goal[0])) and (idx(state_now.y) == idx(goal[1]))):\n",
+    "            print(\"Goal reached by A*\")\n",
+    "            ret_path = path(closed,came_from,state_now)\n",
+    "            print(\"Exec time A* :\",time.time()-start_time)\n",
+    "            return True,ret_path\n",
+    "        for every_state in new_state_transition(state_now,goal):\n",
+    "            \n",
+    "                  \n",
     "                  \n",
     "                  \n",
     "                  \n",
@@ -480,6 +529,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-0.61086524 -0.48869219 -0.36651914 -0.2443461  -0.12217305  0.\n",
+      "  0.12217305  0.2443461   0.36651914  0.48869219  0.61086524]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "print(np.linspace(np.deg2rad(-35),np.deg2rad(35),11))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -502,7 +570,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
