--- a/Untitled6.ipynb
+++ b/Untitled6.ipynb
@@ -140,18 +140,34 @@
     "        ## ---AGV state parameters\n",
     "        vr = (2*vel + omega*db_wheels ) / (2*wheel_radius)\n",
     "        vl = (2*vel - omega*db_wheels ) / (2*wheel_radius)\n",
+    "        \n",
     "        psi2 = normalize_psi(current_state.psi + (omega * dt))\n",
-    "        \n",
     "        dx = vel * np.cos(psi2) * dt\n",
-    "        dy = vel * np.sin(psi2) * dt\n",
-    "        \n",
+    "        dy = vel * np.sin(psi2) * dt   \n",
     "        x2 = current_state.x + dx\n",
     "        y2 = current_state.y + dy\n",
     "        g2 = current_state.g + np.sqrt(dx*dx + dy*dy)\n",
     "        \n",
     "        ##---Trolley states\n",
+    "        ## should be able to get the trolley state based on iteration number\n",
     "        tl_ = []\n",
-    "        for i in range(1,current_state.no_trolley+1):\n",
+    "        \n",
+    "        for i in range(0,current_state.no_trolley):\n",
+    "            #Trolley1\n",
+    "            if i==0:\n",
+    "                t1=current_state.trolley_list[i].t_psi + vel/db_trolley * np.sin(psi2-current_state.trolley_list[i].t_psi)\n",
+    "                x1=x2 - db_trolley*np.cos(t1)\n",
+    "                y1=y2 - db_trolley*np.sin(t1)\n",
+    "                tl_.append(trolley(x1,y1,t1,i+1))\n",
+    "            #Trolley2\n",
+    "            elif i==1:\n",
+    "                t2=current_state.trolley_list[i].t_psi + vel/db_trolley *np.cos(current_state.psi-current_state.trolley_list[i-1].t_psi)* np.sin(current_state.trolley_list[i-1].t_psi-current_state.trolley_list[i].t_psi)\n",
+    "                x2=tl_[i-1].t_x - db_trolley*np.cos(t2)\n",
+    "                y2=tl_[i-1].t_y - db_trolley*np.sin(t2)\n",
+    "        ##-------------\n",
+    "                \n",
+    "            \n",
+    "        \n",
     "            \n",
     "            \n",
     "        \n",
@@ -556,21 +572,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.15"
   }
  },
  "nbformat": 4,
